API to list available versions
