# public/openapi.yaml
@@ -132,7 +132,52 @@ paths:
                     date: null
                     rtools: "43"
                     rtools_url: "https://github.com/r-hub/rtools43/releases/download/latest/rtools43.exe"
-                
+
+  '/available/:os/:arch':
+    parameters:
+    - name: os
+      in: path
+      required: true
+      description: |
+        Operating system. One of:
+        - `win`
+        - `macos`
+        - `linux-<distro>-<release>`
+
+        Currently supported Linux distros are:
+        - `ubuntu` (18.04, 20.04, 22.04),
+        - `centos` (7, 9),
+        - `debian` (10, 11),
+        - `rhel` (9),
+        - `opensuse` (15.3, 15.4),
+        - `almalinux` (8.x, 9.x),
+        - `rocky` (8.x, 9.x).
+      schema:
+        type: string
+    - name: arch
+      in: path
+      required: false
+      description: |
+        Architecture. Only specify it if 'os' is also specified. It can be
+        - `x86_64` (the default), and
+        - `arm64`
+        for Linux and macOS. For Windows if must be missing currently.
+      schema:
+        type: string
+    get:
+      summary: List available versions for a platform.
+      description: |
+        List all available R buidls for a platform and architecture.
+      responses:
+        '200':
+          description: Successful query.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/avversion'
+
 
   /r-release:
     get:
@@ -350,7 +395,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/rtoolsversion'
-                  
+
 
 components:
   schemas:
@@ -427,6 +472,34 @@ components:
       example:
         version: "4.2.3"
         nickname: "Shortstop Beagle"
+        type: "release"
+        url: "https://cran.r-project.org/src/base/R-4/R-4.2.3.tar.gz"
+        date: "2023-03-15T08:06:01.008593Z"
+
+    avversion:
+      properties:
+        version:
+          type: string
+          pattern: '^\d+\.\d+(\.\d+)?$'
+        name:
+          type: string
+        date:
+          type: string
+          format: date-time
+        type:
+          type: string
+        url:
+          type: string
+          format: uri
+      required:
+        - version
+        - date
+        - name
+        - type
+        - url
+      example:
+        version: "4.2.3"
+        name: "4.2.3"
         type: "release"
         url: "https://cran.r-project.org/src/base/R-4/R-4.2.3.tar.gz"
         date: "2023-03-15T08:06:01.008593Z"
